# inspector_gadget

./: .gitignore  LICENSE  Makefile  README.md  inspector.py  pyproject.toml
data/sample/ccda1/: 170.314B2_Amb_CCD.ccda
